# matcha

./: Cargo.toml  README.md
migrations/: 0001_init.sql
src/: command.rs  dependencies.rs  download.rs  error.rs  installer.rs  main.rs  manifest.rs  package.rs  progress.rs  registry.rs  state.rs  ui.rs  util.rs  workspace.rs
tests/: integration_tests.rs  registry.toml
