[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "time"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
