[package]
name = "matcha"
version = "0.1.0"
edition = "2021"
authors = ["Robin Schroer"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
once_cell = "1"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "time"] }
tempfile = "3"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"

[dev-dependencies]
assert_cmd = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
