[package]
name = "matcha"
version = "0.1.0"
edition = "2021"
authors = ["Robin Schroer"]

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
futures-util = "0.3"
indicatif = "0.17"
once_cell = "1"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "time"] }
tempfile = "3"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"

[dev-dependencies]
assert_cmd = "1"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
